--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "init": "^0.1.2",
+    "knex": "^0.21.5",
+    "sqlite3": "^5.0.0"
   }
 }
